--- a/Catalin/styles.sass
+++ b/Catalin/styles.sass
@@ -10,22 +10,28 @@
 	margin: 2%
 	box-shadow: 0.5vw 0.5vw 1vw 0vw
 	border-radius: 0.5vw
+	background-color: lightgrey
+	
 	img
 		width: 100%
 		height: 13.5vw
 
 .quoteBox
 	width: 100%
-	background-color: lightgrey
 	display: flex
-	justify-content: center
-	align-items: center
+	flex-direction: column
+	justify-content: space-between
+	padding: 10% 5%
 
 	h3
 		text-align: center
 		width: 100%
-		padding: 10% 5%
+		
 		font-size: 1.5vw
+
+	p 
+		margin: 0
+		font-size: 4vw
 
 #wrapper2
 	width: 100%
@@ -38,13 +44,14 @@
 	margin: 2%
 	box-shadow: 0.7vw 0.7vw 1vw 0vw
 	border-radius: 0.7vw
+	background-color: lightgrey
+	
 	img
 		width: 100%
 		height: 19vw
 
 .infoBox
 	width: 100%
-	background-color: lightgrey
 	display: flex
 	flex-direction: column
 	justify-content: center
@@ -56,3 +63,8 @@
 
 	p
 		margin: 0
+		font-size: 1.6vw
+
+	h5
+		margin: 0
+		font-size: 4vw
