--- a/Catalin/styles.sass
+++ b/Catalin/styles.sass
@@ -29,7 +29,7 @@
 		
 		font-size: 1.5vw
 
-	p 
+	h5 
 		margin: 0
 		font-size: 4vw
 
@@ -68,3 +68,11 @@
 	h5
 		margin: 0
 		font-size: 4vw
+
+.black
+	color: black
+
+.red
+	color: red
+
+
