finished dating app

--- a/Catalin/styles.css
+++ b/Catalin/styles.css
@@ -31,8 +31,7 @@
 #wrapper2 {
   width: 100%;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between; }
+  flex-wrap: wrap; }
 
 .cardBig {
   width: 29%;
@@ -65,5 +64,11 @@
 
 .red {
   color: red; }
+
+.hidden {
+  display: none; }
+
+.show {
+  display: block; }
 
 /*# sourceMappingURL=styles.css.map */
