--- a/Catalin/styles.sass
+++ b/Catalin/styles.sass
@@ -37,7 +37,6 @@
 	width: 100%
 	display: flex
 	flex-wrap: wrap
-	justify-content: space-between
 
 .cardBig
 	width: 29%
@@ -74,5 +73,11 @@
 
 .red
 	color: red
+
+.hidden
+	display: none
+
+.show
+	display: block
 
 
